--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/TRPGEngine/Core#readme",
   "dependencies": {
-    "socket.io": "^2.0.2"
+    "crypto": "0.0.3",
+    "socket.io": "^2.0.2",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
