--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trpg-core",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/TRPGEngine/Core#readme",
   "dependencies": {
     "crypto": "0.0.3",
+    "orm": "^3.2.3",
     "socket.io": "^2.0.2",
     "uuid": "^3.1.0"
   },
