--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/TRPGEngine/Core#readme",
   "dependencies": {
     "crypto": "0.0.3",
+    "debug": "^2.6.8",
+    "merge-descriptors": "^1.0.1",
     "orm": "^3.2.3",
     "socket.io": "^2.0.2",
     "uuid": "^3.1.0"
