--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node test/run.js"
+    "test": "mocha test/index.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,9 @@
     "sqlite3": "^3.1.8"
   },
   "devDependencies": {
+    "chai": "^4.1.1",
     "gulp": "^3.9.1",
-    "gulp-live-server": "0.0.30"
+    "gulp-live-server": "0.0.30",
+    "mocha": "^3.5.0"
   }
 }
