--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 sudo: false
 language: node_js
 node_js:
-  - "6"
+  - "7.6"
   - "7"
+  - "8"
+  - "node"
 cache:
   directories:
     - node_modules
