--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "homepage": "https://github.com/TRPGEngine/Core#readme",
   "dependencies": {
     "debug": "^2.6.8",
+    "koa": "^2.3.0",
+    "koa-cors": "0.0.16",
+    "koa-logger": "^3.1.0",
     "merge-descriptors": "^1.0.1",
     "orm": "^4.0.0",
     "socket.io": "^2.0.2",
