--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "koa": "^2.3.0",
     "koa-cors": "0.0.16",
     "koa-logger": "^3.1.0",
+    "log4js": "^2.3.12",
     "merge-descriptors": "^1.0.1",
     "orm": "^4.0.0",
     "socket.io": "^2.0.2",
