--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "debug": "^2.6.8",
     "koa": "^2.4.1",
+    "koa-bodyparser": "^4.2.0",
     "koa-cors": "0.0.16",
     "koa-logger": "^3.1.0",
     "log4js": "^2.3.12",
