--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "chai": "^4.1.1",
     "gulp": "^3.9.1",
     "gulp-live-server": "0.0.30",
-    "mocha": "^3.5.0"
+    "mocha": "^3.5.0",
+    "mysql": "^2.15.0"
   }
 }
