--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "koa-bodyparser": "^4.2.0",
     "koa-cors": "0.0.16",
     "koa-logger": "git+https://github.com/moonrailgun/logger.git#transporter",
+    "koa-router": "^7.3.0",
     "koa-session": "^5.5.1",
     "log4js": "^2.3.12",
     "merge-descriptors": "^1.0.1",
