--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/TRPGEngine/Core#readme",
   "dependencies": {
     "debug": "^3.1.0",
+    "fs-extra": "^5.0.0",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-cors": "0.0.16",
@@ -29,6 +30,7 @@
     "koa-session": "^5.5.1",
     "log4js": "^2.3.12",
     "merge-descriptors": "^1.0.1",
+    "node-schedule": "^1.3.0",
     "orm": "^4.0.2",
     "socket.io": "^2.0.2",
     "sqlite3": "^3.1.13"
