--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "koa-session": "^5.5.1",
     "log4js": "^2.3.12",
     "merge-descriptors": "^1.0.1",
+    "mysql": "^2.15.0",
     "node-schedule": "^1.3.0",
     "orm": "^4.0.2",
     "socket.io": "^2.0.2",
@@ -39,7 +40,6 @@
     "chai": "^4.1.1",
     "gulp": "^3.9.1",
     "gulp-live-server": "0.0.30",
-    "mocha": "^3.5.0",
-    "mysql": "^2.15.0"
+    "mocha": "^3.5.0"
   }
 }
