--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mysql": "^2.15.0",
     "node-schedule": "^1.3.0",
     "orm": "^4.0.2",
+    "orm-transaction": "github:TRPGEngine/node-orm-transaction",
     "socket.io": "^2.0.2",
     "sqlite3": "^3.1.13"
   },
