--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "koa-logger": "git+https://github.com/moonrailgun/logger.git#transporter",
     "koa-router": "^7.3.0",
     "koa-session": "^5.5.1",
+    "koa-static": "^4.0.3",
     "log4js": "^2.3.12",
     "merge-descriptors": "^1.0.1",
     "mysql": "^2.15.0",
