--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "koa-session": "^5.5.1",
     "koa-static": "^4.0.3",
     "log4js": "^2.3.12",
+    "marko": "^4.10.0",
     "merge-descriptors": "^1.0.1",
     "mysql": "^2.15.0",
     "node-schedule": "^1.3.0",
