--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.18.0",
     "debug": "^3.1.0",
     "fs-extra": "^5.0.0",
+    "ioredis": "^3.2.2",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-cors": "0.0.16",
