--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ node_js:
   - "7.6"
   - "7"
   - "8"
-  - "node"
+  - "9"
  matrix:
   allow_failures:
-  - node_js: 'node'
+  - node_js: '9'
 cache:
   directories:
     - node_modules
