--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "marko": "^4.10.0",
     "merge-descriptors": "^1.0.1",
     "mysql": "^2.15.0",
+    "mysql2": "^1.6.4",
     "node-schedule": "^1.3.0",
     "orm": "^4.0.2",
     "orm-transaction": "github:TRPGEngine/node-orm-transaction",
+    "sequelize": "^4.42.0",
     "socket.io": "^2.0.2",
     "sqlite3": "^3.1.13"
   },
