--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "koa-router": "^7.3.0",
     "koa-session": "^5.5.1",
     "koa-static": "^4.0.3",
+    "lodash": "^4.17.11",
     "log4js": "^2.8.0",
     "marko": "^4.10.0",
     "merge-descriptors": "^1.0.1",
