--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "chai": "^4.1.1",
     "gulp": "^3.9.1",
     "gulp-live-server": "0.0.30",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "socket.io-client": "^2.2.0"
   }
 }
