:hammer: 优化一些终端显示细节

--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   },
   "homepage": "https://github.com/TRPGEngine/Core#readme",
   "dependencies": {
+    "@koa/cors": "^2.2.3",
     "axios": "^0.18.0",
     "debug": "^3.1.0",
     "fs-extra": "^5.0.0",
     "ioredis": "^3.2.2",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
-    "koa-cors": "0.0.16",
     "koa-logger": "git+https://github.com/moonrailgun/logger.git#transporter",
     "koa-router": "^7.3.0",
     "koa-session": "^5.5.1",
