--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "node-schedule": "^1.3.0",
     "orm": "^4.0.2",
     "orm-transaction": "github:TRPGEngine/node-orm-transaction",
+    "raven": "^2.6.4",
     "sequelize": "^4.42.0",
     "socket.io": "^2.0.2",
     "sqlite3": "^3.1.13"
